added a new feature

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello, Git!</h1>
     <p>This is a simple practice HTML page for Git.</p>
     <button id="clickMeButton">Click me!</button>
+    <div id="newFeature">This is a new feature!</div>
     <script src="script.js"></script>
 </body>
 </html>
