--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>This is a simple practice HTML page for Git.</p>
     <button id="clickMeButton">Click me!</button>
     <div id="newFeature">This is a new feature!</div>
+    <div id="newSection">This is a new section added to the website!</div>
     <script src="script.js"></script>
 </body>
 </html>
